[tool.poetry]
name = "tdd project desafio"
version = "0.0.1"
description = "Criando uma API com o FastAPI utilizando TDD"
authors = ["Amadeo Bon <amadeosph@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
